van rijbergen commit

--- a/09_mood.Rmd
+++ b/09_mood.Rmd
@@ -33,8 +33,8 @@ print(plotmood_down)
 
 ### Bipolar unidimensional items
 \index{Bipolar unidimensional items}
-Another option to assist respondents with the interpretation of single mood items, is to use a bipolar scale. These items place two opposing mood states at each end of the scale, for example by asking "Please rate your current mood on a scale of 0 to 100, on which 0 indicates happy, and 100 indicates sad" [@VanRijsbergen2014]. A downside of this approach that you should consider, is that it assumes that mood states, such as happy and sad are mutually exclusive and thus cannot occur simultaneously.
-The bipolar-unidimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also, the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfil formal criteria for relapse (false positives) [@VanRijsbergen2014]. 
+Another option to assist respondents with the interpretation of single mood items, is to use a bipolar scale. These items place two opposing mood states at each end of the scale, for example by asking "Please rate your current mood on a scale of 0 to 100, on which 0 indicates happy, and 100 indicates sad" [@Vanrijsbergen2014]. A downside of this approach that you should consider, is that it assumes that mood states, such as happy and sad are mutually exclusive and thus cannot occur simultaneously.
+The bipolar-unidimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also, the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfil formal criteria for relapse (false positives) [@Vanrijsbergen2014]. 
   
 ## Bag-of-Items
 In order to make sure all constructs of interest are measured, you can also consider including a number of specific mood items in your EMA questinnaire, rather than one general unipolar item or one bipolar item. For example you can ask respondents "How depressed are you feeling right now" and "How anxious are you feeling right now [@Starr2012]. This strategy often leads to a 'bag-of-items' approach, where single items from various sources, such as existing questionnaires on mood and sleep, are combined into a new EMA questionnaire. A benefit of this approach is that you can select items for which information on validity and test-retest reliability is available. A downside of the bag-of-items approach is that items scores can only be evaluated separately, rather that providing one overall indication of mood or well-being.
