--- a/book.bib
+++ b/book.bib
@@ -471,7 +471,6 @@ year = {2016}
   year = "1996",
   language = "English",
   pages = "141--164",
-  editor = "J. Fahrenberg and M. Myrtek",
   booktitle = "Ambulatory Assessment. Computer assisted psychological and psychophysiological methods in monitoring and field studies",
   publisher = "Hogrefe \& Huber",
 }
@@ -1144,9 +1143,7 @@ year = {1999}
 }
 
 
-
-
-@Article{VanRijsbergen2014,
+@Article{Vanrijsbergen2014,
   author    = {van Rijsbergen, Gerard D. and Burger, Huibert and Hollon, Steven D. and Elgersma, Hermien J. and Kok, Gemma D. and Dekker, Jack and de Jong, Peter J. and Bockting, Claudi L.H.},
   title     = {{How do you feel? Detection of recurrent Major Depressive Disorder using a single-item screening tool}},
   journal   = {Psychiatry Research},
@@ -1160,7 +1157,7 @@ year = {1999}
   keywords  = {Affect,Depression,Relapse,Screening,Sensitivity,Specificity,Visual analogue scale},
   pmid      = {25070177},
   publisher = {Elsevier},
-  url       = {http://dx.doi.org/10.1016/j.psychres.2014.06.052},
+  url       = {http://dx.doi.org/10.1016/j.psychres.2014.06.052}
 }
 
 @Book{Venables2002,
