--- a/book.bib
+++ b/book.bib
@@ -142,6 +142,17 @@
   year = {2016}
 }
 
+@article{buysse2007,
+  title={Daytime symptoms in primary insomnia: a prospective analysis using ecological momentary assessment},
+  author={Buysse, Daniel J and Thompson, Wesley and Scott, John and Franzen, Peter L and Germain, Anne and Hall, Martica and Moul, Douglas E and Nofzinger, Eric A and Kupfer, David J},
+  journal={Sleep Medicine},
+  volume={8},
+  number={3},
+  pages={198--208},
+  year={2007},
+  publisher={Elsevier}
+}
+
 
 @Article{Calenge2006,
   author = {C. Calenge},
@@ -438,6 +449,17 @@
   year = {2018}
 }
 
+@article{epskamp2018d,
+  title={Personalized network modeling in psychopathology: The importance of contemporaneous and temporal connections},
+  author={Epskamp, Sacha and van Borkulo, Claudia D and van der Veen, Date C and Servaas, Michelle N and Isvoranu, Adela-Maria and Riese, Harri{\"e}tte and Cramer, Ang{\'e}lique OJ},
+  journal={Clinical Psychological Science},
+  volume={6},
+  number={3},
+  pages={416--427},
+  year={2018},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @Book{FieldSPSS,
   title     = {Discovering Statistics Using IBM SPSS Statistics},
   publisher = {Sage Publications Ltd.},
@@ -572,6 +594,16 @@
   publisher={British Medical Journal Publishing Group}
 }
 
+@article{kaida2006,
+  title={Validation of the Karolinska sleepiness scale against performance and EEG variables},
+  author={Kaida, Kosuke and Takahashi, Masaya and {\AA}kerstedt, Torbj{\"o}rn and Nakata, Akinori and Otsuka, Yasumasa and Haratani, Takashi and Fukasawa, Kenji},
+  journal={Clinical Neurophysiology},
+  volume={117},
+  number={7},
+  pages={1574--1581},
+  year={2006},
+  publisher={Elsevier}
+}
 
 @InCollection{Kirchner2013,
   author    = {Kirchner, Thomas R. and Shiffman, Saul},
@@ -670,6 +702,17 @@
   keywords  = {experience sampling},
 }
 
+@article{Lindert2018,
+  title={Bright environmental light ameliorates deficient subjective ‘liking’in insomnia: an experience sampling study},
+  author={Te Lindert, Bart HW and Itzhacki, Jacob and van der Meijden, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and Van Someren, Eus JW},
+  journal={Sleep},
+  volume={41},
+  number={4},
+  pages={zsy022},
+  year={2018},
+  publisher={Oxford University Press US}
+}
+
 @article{Lomb1976,
   archivePrefix = {arXiv},
   arxivId = {arXiv:1011.1669v3},
@@ -716,6 +759,17 @@ year = {1999}
   isbn      = {978-1-60918-747-7 (Hardcover); 978-1-60918-749-1 (PDF)},
   booktitle = {Handbook of research methods for studying daily life.},
   keywords  = {*Data Collection,*Experimental Design,*Experimentation,*Life Experiences,*Methodology,Behavior,Cognition,Emotions,Psychological Theories},
+}
+
+@article{Meijden2016,
+  title={Individual differences in sleep timing relate to melanopsin-based phototransduction in healthy adolescents and young adults},
+  author={Van Der Meijden, Wisse P and Van Someren, Jamie L and Te Lindert, Bart HW and Bruijel, Jessica and Van Oosterhout, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and Van Someren, Eus JW},
+  journal={Sleep},
+  volume={39},
+  number={6},
+  pages={1305--1310},
+  year={2016},
+  publisher={Oxford University Press}
 }
 
 @Article{Moore2016,
