--- a/14_aph-catalogue.Rmd
+++ b/14_aph-catalogue.Rmd
@@ -1,10 +1,15 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 # (PART) EMA Catalogues {-}
 
 # EMA Research Groups within APH {#aphcat}
 
 This chapter summarises ongoing EMA research projects within the APH mental health consortium, as a guide to other researchers looking for nearby EMA-expertise and research collaboration.  
 
-## Overview
+# Overview
 
 Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 
@@ -33,7 +38,7 @@ Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 
 
 
-### The Bockting group
+## The Bockting group
 \index{Bockting}
 Prof. dr. Claudi Bockting is a professor in clinical psychology at the psychiatry department of the AMC location of Amsterdam UMC and the Rijksuniversiteit Groningen. Her group focuses on treatment and relapse prevention of (severe) depressive disorder and related common mental health disorders.  
 
@@ -58,7 +63,7 @@ Prof. dr. Claudi Bockting is a professor in clinical psychology at the psychiatr
 
 
 
-### The CASPAR Project
+## The CASPAR Project
 \index{CASPAR}
 
 The Continuous Assessment for Suicide Prevention And Research (CASPAR) study (2016-2010) aims to evaluate the feasibility of mobile safety planning and daily mobile self-monitoring in routine care treatment for suicidal patients, and to conduct fundamental research on suicidal processes [@Nuij2018]. 
@@ -85,7 +90,7 @@ The Continuous Assessment for Suicide Prevention And Research (CASPAR) study (20
 | Website | [ZonMw summary](https://www.zonmw.nl/nl/onderzoek-resultaten/kwaliteit-van-zorg/programmas/project-detail/suicidepreventie/continuous-assessment-for-suicide-prevention-and-research-caspar-smartphone-enabled-safety-pla/verslagen/)|
 
 
-### Study on Chronic Fatigue Syndrome
+## Study on Chronic Fatigue Syndrome
 \index{Chronic Fatigue}
 
 The Study on Chronic Fatigue Syndrome (CFS) focusses on CFS patients that are treated at the Expert Centre for Chronic Fatigue (ECCF). The study aims to examine determinants of chronic fatigue. 
@@ -110,7 +115,7 @@ Prepare a clear and detailed guideline/handbook for colleagues who will assist i
 No METC approval was required, as this type of EMA studies do not fall under the scope of Medical Research Involving Human Subjects (WMO). 
 It was not feasible for all participants to have access to the internet at all times that the Roqua questionnaire needed to be filled-in. This caused some data to be missing. |
 
-### Moodbuster and E-COMPARED (EU)
+## Moodbuster and E-COMPARED (EU)
 \index{Moodbuster and E-COMPARED}
 
 E-COMPARED is a European study (EU CIP), executed in nine countries, comparing the costs and effects of blended treatment (combined internet, mobile and face-to-face treatment) with Cognitive Behavioural Therapy (CBT) in routine and specialised mental healthcare for depression. Within the project, the Moodbuster application was used to gather EMA data on patient variables, such as depression and sleep. Patients were presented personalised reports on their mental and physical health over time [@Kleiboer2016]. 
@@ -137,7 +142,7 @@ E-COMPARED is a European study (EU CIP), executed in nine countries, comparing t
 | | [Final evaluation report](http://www.ict4depression.eu/wp/wp-content/uploads/2011/03/FP7-248778-D4.7r1.pdf) |
 | | https://www.e-compared.eu/ |
 
-### FAntasTIGUE
+## FAntasTIGUE
 \index{FAntasTIGUE}
 
 The FAntasTIGUE study examines fatigue in patients with COPD, by evaluating the course of fatigue, precipitating/perpetuating factors and hospitalisation. A secondary aim is to identify diurnal differences in fatigue by using EMA [@Goertz2018]. 
@@ -159,7 +164,7 @@ The FAntasTIGUE study examines fatigue in patients with COPD, by evaluating the 
 | Lessons learned | The experience with Psymate is generally positive. Queries are promptly answered and we could also tap into the wealth of experience Psymate has in conducting EMA. |
 | Protocol paper| http://bmjopen.bmj.com/content/8/4/e021745.long |
 
-### MERITS (approval summary 12-03-2018)
+## MERITS (approval summary 12-03-2018)
 \index{MERITS study}
 
 The Momentary assessment of patient Experiences in Real life of Insulin Glargine 300 in Type 1 diabetes (MERITS) Study aims to 1) evaluate whether blood glucose variability is associated with changes in wellbeing (mood) during waking time, and 2) assess whether there are individual differences (profiles) with regard to this association.
@@ -176,7 +181,7 @@ The Momentary assessment of patient Experiences in Real life of Insulin Glargine
 | EMA | Currently under development. Participants will be (randomly) prompted to answer questions on mood (based on POMS questionnaire), diabetes distress, fear of hypoglycaemia and sleep. |
 | Project goals | Explore whether a) blood glucose variability (SD and CV) is related to changes in wellbeing (mood) during waking time, b) if switching to U-300 results in less glucose variability and translates into improved mood over time within patients, c) explore if individual differences (profiles) can be distinguished with regard to the (strength of the) association between glucose variability and changes in mood. |
 
-### NESDA EMA Diary Study
+## NESDA EMA Diary Study
 \index{NESDA}
 
 The main aim of NESDA (the Netherlands study of Anxiety and Depression) is to examine the long-term (eight-year) prognosis and co-morbidity of anxiety and depression in order to improve quality of care and prevent chronicity [@Penninx2008] (https://www.nesda.nl/). 
@@ -198,7 +203,7 @@ Within the NESDA study, EMA was used to assess a variety of research questions, 
 | Results | EMA data will be used to assess a variety of research questions, concerning topics such as the dynamic interplay between cognitions, emotions, behaviour and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, chronotype and diurnal patterns of activity in depressed versus non-depressed participants, and MDD subtypes. |
 | Website | https://www.nesda.nl/ |
 
-### The Psycho-systems group
+## The Psycho-systems group
 \index{Psycho-Systems}
 
 The Psycho-systems group is an UvA based initiative, led by Prof. Dr. Denny Borsboom, focusing on "the development of new methodologies for psychological research using complex systems theory and network models" (http://psychosystems.org/). 
@@ -210,10 +215,10 @@ The Psycho-systems group is an UvA based initiative, led by Prof. Dr. Denny Bors
 | Topic | XX |
 | Status | Ongoing, founded in 2013 |
 | Aims | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam |
-| Results | |
+| Results |[@epskamp2018d ] "temporal and contemporaneous relationships should not be overinterpreted, as these merely show predictive effects and can at most only highlight potential causal pathways." |
 | Website | http://psychosystems.org/|
 
-### Project RADAR-CNS (EU)
+## Project RADAR-CNS (EU)
 \index{RADAR-CNS}
 
 The European (EU H2020-IMI) RADAR-CNS project (Remote Assessment of Disease and Relapse - Central Nervous System) aims to study the potential of wearable devices and smartphone technology to help prevent and treat depression, multiple sclerosis and epilepsy (https://www.radar-cns.org/). The Dutch research site (VUmc/GGZ inGeest) will focus on depression. 
@@ -239,7 +244,7 @@ The European (EU H2020-IMI) RADAR-CNS project (Remote Assessment of Disease and 
 | Lessons learned | When measuring over such a long timespan, extra attention should be paid to the possible burden for participants. Continuous monitoring via a Smartphone can severely impact battery life. Participants prefer consumer devices (such as FitBit) rather than research devices (such as GenActiv), because of stigma. Carrying a research device will prompt questions. |
 | More information | https://www.ecsel.eu/sites/default/files/2017-11/thehyve_vanbochove_-_session3_-_july_5_ecsel_imi_workshop.pdf |
 
-### The van der Gaag group
+## The van der Gaag group
 
 #### TemStem (approval 08-03-2018)
 \index{TEMSTEM}
@@ -281,7 +286,7 @@ The VRETp trial examined virtual-reality-based cognitive behavioural therapy for
 | Results | All 116 participants completed EMA measurements at baseline (mean number of completed self-assessments 46.1, SD 13.3), 96 participants completed the post-treatment assessment sufficiently (43.1, SD 10.1), and 87 participants completed the follow-up (43.2, SD 11.1). The trial results suggest that the addition of VR-CBT to standard treatment can reduce paranoid ideation and momentary anxiety in patients with a psychotic disorder. |
 | Lessons learned | Participants reported not wanting to explain to others why they were using the palmtop (a small black hand-held computer) as a reason for non-compliance with EMA. This directly interfered with the primary aim, namely assessing social context. An app facilitates measurement without the participant having to explain to others what they are doing |
 
-### VU-AMS
+## VU-AMS
 \index{VU-AMS}
 
 The VU University Ambulatory Monitoring System (VU-AMS) is a non-invasive wearable device that is used for continuous ambulatory measurement of the autonomic nervous system. The device was developed by the department of Biological Psychology of the Vrije Universiteit Amsterdam and is used worldwide by many research groups to study stress and emotion in both laboratory and naturalistic settings (http://www.vu-ams.nl/vu-ams/).
@@ -305,7 +310,7 @@ The VU University Ambulatory Monitoring System (VU-AMS) is a non-invasive wearab
 | Results | VU-AMS is considered by many to be the golden standard in ambulatory assessment [@Geus1996]. For more information on publications go to http://www.vu-ams.nl/research/publications/
 | Lessons learned | The autonomic nervous system is almost entirely governed by homeostatic control over cardiovascular function, meaning that posture and physical activity changes will dominate ambulatory recordings. Without appropriate attention to these confounding factors (e.g. by selecting only sedentary fragments, or by deconvolution of the physiological outcomes by parallel registration of posture and activity, location of the accelerometer, robustness of the measure) erroneous conclusions will be drawn.  It is therefore of importance that a clear research question is formulated before data collection is started. With regard to measuring behaviour or affect during an ambulatory study you have to clearly think about the medium you want to use. Thus far no clear consensus is present on a particular medium/diary application that is best suited and/or mostly used by either the department or in combination with the VU-AMS. This may lead to researchers each creating their own diary application which has not been previously validated. In addition, comparing results from studies with similar end goals, but who used different mediums, becomes much more difficult |
 
-### The IMPACT project
+## The IMPACT project
 \index{IMPACT}
 
 The IMPACT project studies state and trait quality of life in patients with cardiac diseases who have multiple somatic co-morbidities. The project aims to improve the conceptualisation of QoL and enhance the sensitivity and comprehensiveness of its measurement by taking the trait-state distinction and response shift into account (http://www.impactonderzoek.nl/).
@@ -328,14 +333,26 @@ The IMPACT project studies state and trait quality of life in patients with card
 | Results | Work in progress, currently exploring the data using network analysis. |
 Lessons learned | To maintain response during follow-ups, it is important to maintain contact with patients between follow-ups. The development and testing of the app can take a significant amount of time, and during the study, updates of the smartphone operating system may lead to new bugs in the app. Due to the amount of data collected via EMA, data cleaning can take up a significant amount of time. The quality of EMA data can be low due to significant amount of missing data. Besides missing data, lack of variation in answers from day-to-day (through use of a Likert scale) could also be an issue. Possible solution is the use of continuous rating scales instead of 7-point Likert scales Both missing data and lack of variation can be a problem if planning to estimate vector autoregressive models.  |
 
-### The Sleep & Cognition group
+## The van Someren group
 \index{Sleep}
 
-The Sleep & Cognition group, headed by Ysbrand Van Der Werf, studies the interplay between sleep (disturbance), wakefulness and brain function. Various research methods are combined, including a fully equipped sleep-lab, neuro-imaging and EMA. 
-
-samenwerking met andere afdelingen
+Eus van Someren is head of the department of sleep and cognition, which is part of the Netherlands Institute for Neuroscience and is situated at the Amsterdam Academic Medical Center. The group focusses on studying healthy and disturbed sleep. The department has a fully equipped sleep-lab and combines various research methods, such as neuro-imaging, actigraphy and EMA. 
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
-|  Project team |  |
-|APH site | AMC and VUmc |
+|  Project team | Eus van Someren, PhD (departement head); Tessa Blanken, MSc; Michele Colombo, MSc; Kim Dekker, MSc; Jeanne Leerssen, MSc; Bart te Lindert, MSc; Wisse van der Meijden, MSc; Rick Wassing, Phd  |
+|APH site | AMC and GGZ inGeest |
+| Projects that involve EMA | |
+|Sleep and light | Wisse van der Meijden studies, among other things, the interplay between light, vigilance, post-illumination pupil response (PIPR) and sleep by combining information from a) a questionnaire on habitual lights-out time, sleep onset latency, and final wake-up time (Munich Chronotype Questionnaire), a one-week sleep diary on actual wake/sleep times and actigraphy.   | 
+|EMA passive | Actigraphy data was obtained using either a Philips Actiwatch Spectrum or a microelectromechanical accelerometer (Move II, Movisens GmbH). Data collection was set to 30hz.|
+|Data management | Sleep onset and final wake-up time were estimated using an algorithm that is implemented in Matlab (https://github.com/btlindert/actant-1).  |
+|Results| Participants (adolescents and young adults, n=71) with a later sleep timing had a stronger responsiveness to blue light. The mid-sleep timing estimates from sleep diaries and actigraphy shared 94.5% of their interindividual variance [@Meijden2016]. | 
+| | |
+|Sleep and context | Bart te Lindert studies the relation between context and sleep, for example by measuring light, body temperature and posture, and psychological variables. A recent study focused on Insomnia, light intensity and Liking, Wanting and mood. |
+| EMA active | Prompts were sent eight times a day for one week. Prompts were timed at quasi-random intervals between 8:00 and 22:00. In addition, participants provided input after waking up and before bedtime. The interval between prompts ranged between 16 minutes and 3 hours. EMA consisted of 22 items. Liking and Wanting (6 items each), focused on taste or smell, bodily sensation, watching or listening, interactions with other, physical activity or being busy, and receiving something. Participants indicated whether they enjoyed and wanted these categories on a 0-100 VAS scale (ranging from not to very much). Mood items were derived from the Daytime Insomnia Symptom Scale (DISS, @buysse2007), which was developed specifically for EMA. Items focused on positive mood (5 items; relaxed, energetic, calm, happy, and efficient) and negative mood (5 items; anxious, stressed, tense, sad, and irritable). Items were scored on a 0-20 VAS-scale (ranging from very little to very much). |
+| EMA passive | Participants wore two light sensors (Dimesimeter), one on their indoor clothes and one on their jacket. A build-in accelerometer indicated at what times the outdoor clothing was used. Light was sampled every minute for one week. |
+| Data management | Participants received a designated Android smartphone for the duration of EMA. Detailed information on data processing and analysis can be found in @Lindert2018.  |
+| Results | On average, 80% of the prompts contained valid data. People with insomnia disorder (n=17) had significantly lower subjective Liking and Wanting than matched controls without sleep complaints (n=18). This was most apparent at low environmental light intensity. There were no overall differences between groups in Positive mood and Negative mood. Participants with insomnia did have a different diurnal profile of Positive mood and Negative mood [@Lindert2018]. 
+| | |
+| Lessons learned | The one-item Karolinska sleepiness scale is advised as a simple way to measure sleepiness in EMA. The item was validated against performance and EEG variables [@kaida2006]. A 30hz frequency is an acceptable sampling frequency for actigraphy, and is generally considered the gold standard. Higher frequencies lead to shorter battery life, while not improving estimations. Asking participants to keep a sleep diary parallel to wearing an accelerometer/actigraph is vital in order to determine lights-out time and wake-up time. When actigraph data and the sleep diary do not overlap, the information from the diary should be used. |
+
