--- a/01_EMA.Rmd
+++ b/01_EMA.Rmd
@@ -12,37 +12,18 @@
 
 Ecological Momentary Assessment (EMA) has many aliases. It is known as 'experience sampling' [@Larson1983], 'ambulatory assessment' [@EbnerPriemer2009] or 'Ambulatory self-reporting' [@Conner2012a], 'real-time data capturing', the 'continuous unified electronic diary method' [@EllisDavies2012], and as the 'intensive-longitudinal study design' [@Bolger2013]. The different terms stress different aspects of EMA research. All terms, however, refer to research methods that involve the repeated sampling of people's current thoughts, emotions, behaviour, physiological states, and context, in their natural environment, typically (but not necessary) via electronic wearable devices [@Shiffman2008].
 
-EMA has been around for many years. Already in the 1980's, early pioneers used electronic devices to elicit responses from study participants to tap into (mental) health processes in everyday life [see, e.g.,  @Csikszentmihalyi2014]. Recent years, however, have witnessed a large increase in EMA research. Rapid technological developments, a marked interest in the individual, and a wide recognition of the need to study health-related processes in real-life situations have all contributed to this. 
+EMA has been around for many years. Already in the 1980's, early pioneers used electronic devices to elicit responses from study participants to tap into (mental) health processes in everyday life [see, e.g., @Csikszentmihalyi2014]. Recent years, however, have witnessed a large increase in EMA research. Rapid technological developments, a marked interest in the individual, and a wide recognition of the need to study health-related processes in real-life situations have all contributed to this. 
 
-With the increased adoption of EMA comes a growing need for methodological guidelines. EMA studies have unique characteristics that require specialised research skills, related to study design statistical analysis. In many cases, these skills are not part of the standard curriculum of academic departments. This book was written to fill this gap.
+With the increased adoption of EMA comes a growing need for methodological guidelines. EMA studies have unique characteristics that require specialised research skills, related to study design and statistical analysis. In many cases, these skills are not part of the standard curriculum of academic departments. This book was written to fill this gap.
 
 
 ### Self-report versus Observational EMA
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta.
-
+In EMA research, there are two forms of data collection: EMA based on self-report (active) and EMA based on observational (passive) data. Self-report requires participants to provide information, for example by rating their current mood, activities or social interaction on items that are presented to them during EMA. For observational EMA, information is collected through wearables or logfiles without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media. Some studies combine both forms of data collection, for example by using both a self-report sleep diary and an accelerometer in order to study sleeping patterns [@Meijden2016]. 
 
 #### Self-report EMA
 \index{EMA!Self-report EMA} \index{EMA!Active EMA|see{Self-report EMA}}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
-
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.  
 
 
 #### Observational EMA
@@ -78,17 +59,12 @@ In *event-contingent sampling*, study participants complete an assessment whenev
 
 ## Why EMA?
 
-EMA aims to "minimize recall bias, maximize ecological validity, and
-allow study of microprocesses that influence behavior in real-world
-contexts." [@Shiffman2008].
-
+EMA aims to "minimize recall bias, maximize ecological validity, and allow study of microprocesses that influence behavior in real-world contexts." [@Shiffman2008]. 
+Recall bias refers to the concern that with retrospective self-report information, participants' current state might affect the way they remember past events or emotions [@Shiffman2008; @Moore2016]. The idea of EMA is evaluate participants' *current state*, rather than reflect on past experiences. By making sure participants are measured in their own environment (daily life), rather than in a research specific context, such as a lab or mental healthcare centre, EMA is thought to provide *ecological valid* information that is not distorted by context.  
 
 ### Focus on the Individual
+Finally, EMA offers a unique opportunity to study change in individuals with repeated sampling. By doing this, EMA offers a quantitative method for idiographic research [@allport1937], measuring characteristics of individuals across time and context (within-subject change) [@Shiffman2008]. This contrasts with more classic, nomothetic research, in which individuals are grouped together in order to study universal characteristics.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta.
 
 \index{Nomothetic research} \index{Ideographic research} 
 [Nomothetic vs Ideographic research] Donec sed lectus at sem ultrices commodo.
@@ -105,6 +81,7 @@ a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel
 fringilla. Sed at varius erat, id consequat nibh. Ut eget leo blandit orci
 posuere tincidunt ac sed erat. Aenean metus metus, eleifend ut facilisis a,
 fringilla ut neque. Nunc hendrerit cursus eleifend.  
+??? Fermi–Pasta–Ulam–Tsingou problem ??? 
 
 
 ```{r fig1a, echo = FALSE, fig.cap = "An extreme case of how indiviual effects may be different from group effects: the effect of x on y is positive for individuals (marked by ellipses), but negative for the group (as illustrated by the negative regression line)."}
