--- a/book.bib
+++ b/book.bib
@@ -16,7 +16,12 @@
   url             = {http://linkinghub.elsevier.com/retrieve/pii/S0272735812000712 http://www.ncbi.nlm.nih.gov/pubmed/22721999},
 }
 
-
+@article{allport1937,
+  title={Personality: A psychological interpretation.},
+  author={Allport, Gordon Willard},
+  year={1937},
+  publisher={Holt}
+}
 
 @misc{aph_qh,
   author = {{Amsterdam Public Health}},
