--- a/book.bib
+++ b/book.bib
@@ -947,6 +947,17 @@ year = {1999}
   publisher = {American Psychological Association},
 }
 
+@article{ruwaard2009,
+  title={Standardized web-based cognitive behavioural therapy of mild to moderate depression: a randomized controlled trial with a long-term follow-up},
+  author={Ruwaard, Jeroen and Schrieken, Bart and Schrijver, Menno and Broeksteeg, Janneke and Dekker, Jack and Vermeulen, Hans and Lange, Alfred},
+  journal={Cognitive behaviour therapy},
+  volume={38},
+  number={4},
+  pages={206--221},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
 @article{Saeb2015,
   author = {Saeb, Sohrab and Zhang, Mi and Karr, Christopher J. and Schueller, Stephen M. and Corden, Marya E. and Kording, Konrad P. and Mohr, David C.},
   doi = {10.2196/jmir.4273},
