Edit front page to smaller jpeg

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -1,5 +1,5 @@
 \thispagestyle{empty}
-\includepdf[fitpaper=false, pages=-]{images/cover/Cover2_nocopyright.png}
+\includepdf[fitpaper=false, pages=-]{images/cover/smallcover.jpg}
 
 % restore maketile (disabled in preamble.tex to get the cover before
 % title)
